--- a/style2.css
+++ b/style2.css
@@ -81,7 +81,8 @@ header a:hover{
 /* Showcase */
 #showcase {
   min-height: 9000px;
-background:url('../img/black.jpg') repeat 2 -800px; text-align: center;
+background:url('../img/black.jpg')     width: 100%
+repeat 2 -800px; text-align: center;
  color: #ffffff;
 }
 
