--- a/style2.css
+++ b/style2.css
@@ -81,9 +81,10 @@ header a:hover{
 /* Showcase */
 #showcase {
   min-height: 9000px;
-background:url('../img/black.jpg')     width: 100%
+:background: #35424a;
+  color: #000000;     width: 100%
 repeat 2 -800px; text-align: center;
- color: #ffffff;
+ color: #000000;
 }
 
 #showcase h1 {
