--- a/style2.css
+++ b/style2.css
@@ -81,8 +81,8 @@ header a:hover{
 /* Showcase */
 #showcase {
   min-height: 9000px;
-:background: #35424a;
-  color: #000000;     width: 100%
+:background: #000000;
+  color: #000000;     
 repeat 2 -800px; text-align: center;
  color: #000000;
 }
