--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@
 	font-size: 42px;
 	text-align: center;
 }
+#p1 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    font-family: sirin-stencil;
+}
+#h2m {
+    font-family: dynalight;
+    font-style: normal;
+    font-weight:600;
+    font-size: 25px;
+}#p2 {
+     font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    font-family: sirin-stencil;
+}
